# newsletter-wizard-public

./: .env.example  .gitignore  Dockerfile  PRIVATE_README.md  README.md  alembic.ini  docker-compose.yml  newsletter_workflow.example.yml  newsletter_worklow.example.yml  pyproject.toml
.github/workflows/: newsletter.yml
alembic/versions/: 2025-04-04_11-56-35_6532c6a659be_is_archived.py  2025-04-04_11-58-00_9ac281555c75_on_delete.py  2025-04-04_14-31-04_653ecff6b24c_title_slug_image.py  2025-04-04_14-31-45_5c1b644d674b_slug_not_nullable.py
app/: Dockerfile  discord_newsletter.py  drizzle.config.ts  newsletter_scheduler.py  package.json  pnpm-lock.yaml  send_newsletter.py  tailwind.config.ts
app/app/: app.css  root.tsx  routes.ts  sessions.server.tsx
app/drizzle/: 0000_massive_wither.sql  0001_image_and_published_at.sql  0002_image.sql  0003_image_not_null.sql  0004_remove_input_text.sql  0005_remove_output_html.sql  0006_images_data.sql  0007_images_url_nullable.sql  0008_images_data_not_null.sql  0009_nb_read.sql
backend/: Dockerfile  app-cron  pyproject.toml
backend/alembic/: env.py
backend/app/: refresh_news.py
backend/dev/: init_db.py
backend/libs/: config.py  db_helper.py  db_models.py  extract_all_newsletters.py  mailgun.py  newsletter_generator.py  openai_chat.py  s3_helper.py
caddy/: Caddyfile
config/: example.settings.yaml
dev/: init_db.py
libs/: DiscordExtractor.py  config.py  db_helper.py  db_models.py  discord_extractor.py  extract_all_newsletters.py  newsletter.py  newsletter_generator.py
libs/extractors/: ExtractorABC.py  (+2 more)
(+52 files in other folders)
