[tool.poetry]
name = "discord-summarize"
version = "0.1.0"
description = ""
authors = ["Paul <paul.chaumeilv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.49.1"
pyyaml = "^6.0.2"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"
openai = "^1.58.1"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
